--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Mako==1.3.10
 Markdown==3.9
 MarkupSafe==3.0.3
 Pygments==2.19.2
+python-dotenv==1.0.1
 SQLAlchemy==2.0.44
 typing_extensions==4.15.0
 Werkzeug==3.1.3
