--- a/requirements.txt
+++ b/requirements.txt
@@ -2,17 +2,20 @@ alembic==1.17.0
 blinker==1.9.0
 click==8.3.0
 colorama==0.4.6
+dotenv==0.9.9
 Flask==3.1.2
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
+git-filter-repo==2.47.0
 greenlet==3.2.4
 itsdangerous==2.2.0
 Jinja2==3.1.6
 Mako==1.3.10
 Markdown==3.9
 MarkupSafe==3.0.3
+pillow==12.0.0
 Pygments==2.19.2
-python-dotenv==1.0.1
+python-dotenv==1.1.1
 SQLAlchemy==2.0.44
 typing_extensions==4.15.0
 Werkzeug==3.1.3
